# mlops_project_prueba

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: feature_pipeline.yaml  pipelines.yaml
data/processed/: X.parquet  df_lags.parquet  features_target_2024_01.parquet  y.parquet
data/transformed/: tabular_data.parquet  tabular_data_14d.parquet  tabular_data_24h.parquet  ts_data_2024_01.parquet
models/: linear_regression.pkl  random_forest.pkl
notebooks/: 07_linear_reg_model.ipynb  08_random_forest_model.ipynb  09_xg_boost_model.ipynb  0_experiment_notebook.ipynb  10_lightgbm_model.ipynb  11_lightbgm_model_with_feature_engineering.ipynb  11_lightbgm_model_with_feature_engineering_hyperparam_optuna.ipynb  12_backfill_feature_store.ipynb  13_feature_pipeline.ipynb  14_1_training_pipeline_MLflow.ipynb  14_training_pipeline.ipynb  15_1_inference_pipeline_MLFlow.ipynb  15_inference_pipeline.ipynb  1_load_raw_data.ipynb  2_transform_validate_into_ts.ipynb  3_transform_ts_data_into_features_and_targets.ipynb  4_1_raw_data_into_features_targets_12_months.ipynb  4_raw_data_into_features_targets.ipynb  4_raw_data_intro_features_targets copy.ipynb  4_raw_data_intro_features_targets.ipynb  5_visualizing_training_data.ipynb  6_train_baseline_model.ipynb  6_train_simple_model.ipynb
notebooks/mlruns/0/: meta.yaml
src/: config.py  data.py  data_split.py  feature_store_api.py  frontend.py  frontend_mlflow.py  inference.py  model.py  paths.py  transformer_prueba.py
src/pipelines/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
(+104 files in other folders)
