[tool.poetry]
name = "proyecto-mlops-prueba-poetry"
version = "0.1.0"
description = ""
authors = ["Chris6995 <c.donaire95@gmail.com>"]
readme = "README.md"
packages = [{include = "proyecto_mlops_prueba_poetry", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.1.1"
pandas = "<2.2.0"
matplotlib = "^3.10.1"
statsmodels = "^0.14.4"
plotly-express = "^0.4.1"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
joblib = "^1.4.2"
ipykernel = "^6.29.5"
xgboost = "^3.0.0"
lightgbm = "^4.6.0"
pyarrow = "<=17.0.0"
feast = "^0.48.1"
hopsworks = "^4.2.2"
confluent-kafka = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
